--- a/index.html
+++ b/index.html
@@ -712,19 +712,19 @@ footer {
                 <h2>Nossos Projetos</h2>
                 <div class="projects-grid">
                     <div class="project-card">
-                        <h3>Influencer Fashion</h3>
-                        <p>Linkpage elegante para influenciadora de moda com integração de redes sociais e loja online. Design minimalista com foco na conversão.</p>
-                        <a href="#" class="project-link">Ver Projeto</a>
+                        <h3>Loja de maquiagem</h3>
+                        <p>Linkpage elegante para loja de beleza, com integração de redes sociais e catálogo online. Design minimalista em tons suaves, destacando produtos, promoções e links de compra. Foco na conversão e experiência visual sofisticada, ideal para e-commerce de cosméticos e skincare.</p>
+                        <a href="https://makeup-linkpage.netlify.app/" class="project-link">Ver Projeto</a>
                     </div>
                     <div class="project-card">
-                        <h3>Músico Independente</h3>
-                        <p>Página personalizada para artista musical com player integrado, links para streaming e agenda de shows. Visual moderno e interativo.</p>
-                        <a href="#" class="project-link">Ver Projeto</a>
+                        <h3>Salão de Beleza</h3>
+                        <p>Linkpage moderna para salão de beleza, com integração de agendamento online e redes sociais. Layout limpo e minimalista, destacando serviços, portfólio e depoimentos de clientes. Desenvolvida para inspirar confiança e facilitar reservas com poucos cliques.</p>
+                        <a href="https://studiobelezavip.netlify.app/" class="project-link">Ver Projeto</a>
                     </div>
                     <div class="project-card">
-                        <h3>Coach de Negócios</h3>
-                        <p>Linkpage profissional para coach empresarial com agendamento de consultas, depoimentos e materiais gratuitos.</p>
-                        <a href="#" class="project-link">Ver Projeto</a>
+                        <h3>Imobiliária</h3>
+                        <p>Linkpage profissional para imobiliária, com foco em captação de clientes e integração a plataformas de imóveis. Design minimalista e elegante, destacando imóveis em destaque, contato direto via WhatsApp e links para redes sociais. Otimizada para gerar leads e conversões.</p>
+                        <a href="https://imobiliariame.netlify.app" class="project-link">Ver Projeto</a>
                     </div>
             
                 </div>
