link para wpp do botão de contato adicionado

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ footer {
                     <li><a href="#inicio">Início</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#portfolio">Portfólio</a></li>
-                    <li><a href="#contato"><button>Contato</button></a></li>
+                    <li><a href="https://wa.me/5588997068824 "><button>Contato</button></a></li>
                 </ul>
             </nav>
         </div>
