retirei o analitics integrado e mudei o link de loja de maquiagem para psicologa

--- a/index.html
+++ b/index.html
@@ -742,11 +742,7 @@ footer {
                             <h4>Carregamento Rápido</h4>
                             <p>Otimizado para velocidade e performance</p>
                         </div>
-                        <div class="feature">
-                            <div class="feature-icon">📊</div>
-                            <h4>Analytics Integrado</h4>
-                            <p>Acompanhe o desempenho dos seus links</p>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -757,9 +753,9 @@ footer {
                 <h2>Nossos Projetos</h2>
                 <div class="projects-grid">
                     <div class="project-card">
-                        <h3>Loja de maquiagem</h3>
-                        <p>Linkpage elegante para loja de beleza, com integração de redes sociais e catálogo online. Design minimalista em tons suaves, destacando produtos, promoções e links de compra. Foco na conversão e experiência visual sofisticada, ideal para e-commerce de cosméticos e skincare.</p>
-                        <a href="https://makeup-linkpage.netlify.app/" class="project-link">Ver Projeto</a>
+                        <h3>Psicologa</h3>
+                        <p>Linkpage profissional e acolhedor para psicólogos, integrando agendamento direto e redes de conteúdo. Design minimalista em tons suaves, que inspira confiança e clareza, destacando serviços, abordagem terapêutica e formas de contato. Foco na conversão para a primeira sessão e em uma experiência visual que transmite segurança e seriedade.</p>
+                        <a href="https://psisofiamendes.netlify.app/" class="project-link">Ver Projeto</a>
                     </div>
                     <div class="project-card">
                         <h3>Salão de Beleza</h3>
